added slider dots

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -43,6 +43,19 @@
     font-weight: 600;
     line-height: 1.33; 
 }
+.rev-list-dots {
+    gap: 13px;
+}
+.rev-dot-item-svg {
+    width: 13px;
+    height: 13px;
+    fill: rgba(17, 17, 17, 0.10);
+}
+.rev-dot-item-svg.long {
+    width: 28px;
+    height: 13px;
+    fill: var(--ACCENT);
+}
 .rev-btn-leave {
     height: 41px;
 	padding: 0 28px;
