--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -52,6 +52,28 @@
                 </li>
             </ul>
         </div>
+        <ul class="list rev-list-dots">
+            <li class="rev-list-dot-item">
+                <svg class="rev-dot-item-svg long">
+                    <use href="./images/icons.svg#slider-long"></use>
+                </svg>
+            </li>
+            <li class="rev-list-dot-item">
+                <svg class="rev-dot-item-svg">
+                    <use href="./images/icons.svg#slider-dot"></use>
+                </svg>
+            </li>
+            <li class="rev-list-dot-item">
+                <svg class="rev-dot-item-svg">
+                    <use href="./images/icons.svg#slider-dot"></use>
+                </svg>
+            </li>
+            <li class="rev-list-dot-item">
+                <svg class="rev-dot-item-svg">
+                    <use href="./images/icons.svg#slider-dot"></use>
+                </svg>
+            </li>
+        </ul>
         <button type="button" class="btn rev-btn-leave btn-outln-accent" data-modal-review-open>Leave a review</button>
     </div>
 </section>
