--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,4 +1,4 @@
-    <div class="modal-container-re is-hidden" data-modal-review>
+    <div class="modal is-hidden" data-modal-review>
         <div class="modal-box-re">
             <button type="button" data-modal-review-close class="modal-button-re">
                 <svg width="24" height="24" class="svg-button-re">
