--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -69,9 +69,12 @@
                     <div class="mod-buy-input-svg">
                         <input class="clear-style mod-buy-form-input mod-buy-input-phone" id="user-phone" type="tel"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" name="user-phone" placeholder="Phone number" required>
+                        <div class="mod-buy-flagprefix">
                         <svg class="mod-buy-phone-svg">
                             <use href="./images/icons.svg#flag-ua"></use>
                         </svg>
+                        <p>+380</p>
+                        </div>
                     </div>
                 </div>
                 <div class="mod-buy-form-item">
