--- a/src/css/modal-buy.css
+++ b/src/css/modal-buy.css
@@ -1,15 +1,16 @@
 /* oprócz klasy .modal-buy pozostałe style rozpoczynają się od .mod-buy- */
 .modal-buy {
     position: absolute;
-    top: 0; 
+    top: 50%; 
     left: 50%;
     width: 100%;
-    height: 994px;
+    height: 95%;
     margin: 0 auto;
     padding: 32px 24px;
     background-color: var(--LIGHT-BKG);
     border-radius: 15px;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+    overflow: auto;
 }
 .mod-buy-title {
     display: block;
@@ -92,34 +93,66 @@
     flex-grow: 1;
 }
 .mod-buy-input-phone {
-    padding-left: 125px;
+    padding-left: 106px;
 }
+
+@media screen and (min-width: 768px) {
+    .mod-buy-input-phone {
+        padding-left: 177px;
+    }
+}
+
 .mod-buy-input-svg {
     position: relative;
     display: flex;
     width: 100%;
     align-items: center;
 }
-.mod-buy-phone-svg,
+.mod-buy-flagprefix,
 .mod-buy-card-svg {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
-.mod-buy-phone-svg {
+
+.mod-buy-flagprefix {
+    display: flex;
+    align-items: center;
     left: 18px;
+    gap: 8px;
+    color: #000;
+    font-weight: 500;
+    width: 74px;
+    border-right: 1.5px solid rgba(64, 64, 64, 0.3);
+}
+
+@media screen and (min-width: 768px) {
+    .mod-buy-flagprefix {
+        left: 24px;
+        gap: 18px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+        width: 125px;
+        border-right: 2.5px solid rgba(64, 64, 64, 0.3);
+    }
+}
+
+.mod-buy-phone-svg {
     width: 24px;
     height: 18px;
 }
+
 .mod-buy-card-svg {
     right: 18px;
     top: 50%;
     width: 32px;
     height: 21px;
 }
+
 .mod-buy-form-comment {
     display: block;
     height: 91px;
+    resize: none;
 }
 .mod-buy-form-input::placeholder,
 .mod-buy-form-comment::placeholder {
@@ -137,7 +170,7 @@
 @media screen and (min-width: 768px) {
     .modal-buy {
         width: 609px;
-        height: 1058px;
+        height: 95%;
         padding: 48px;
     }
     .mod-buy-list {
@@ -159,15 +192,40 @@
         flex-direction: row;
         gap: 21px;
     }
-    .mod-buy-tel-svg {
-        left: 24px;
+    .mod-buy-phone-svg {
         width: 32px;
         height: 24px;
     }
     .mod-buy-card-svg {
-        right: 18px;
+        right: 24px;
         top: 50%;
         width: 44px;
         height: 30px;
+    }
+}
+
+.send {
+    width: 109px;
+    height: 41px;
+    border-radius: 100px;
+    border: none;
+    background-color: var(--ACCENT);
+    color: var(--WHITE);
+    font-family: inherit;
+    font-weight: 600;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+    
+.send:hover,
+.send:focus {
+    background-color: var(--ACCENT-LIGH);
+    color: var(--ACCENT)
+}
+
+@media screen and (min-width: 768px) {
+    .send {
+        width: 133px;
+        height: 45px;
     }
 }
