--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -67,7 +67,14 @@
   width: 22px;
   height: 22px;
 }
-
+.foot-nav-link:hover,
+.foot-nav-link:focus {
+  color: var(--ACCENT);
+}
+.foot-social-icon:hover,
+.foot-social-icon:focus {
+  fill: var(--ACCENT);
+}
 @media screen and (min-width: 768px) {
   .foot-top-div {
     display: flex;
