--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -1,159 +1,65 @@
 /* oprócz klasy .how-its-made pozostałe style rozpoczynają się od .how- */
-
-/*====== mobile version ====== */
-.how-container {
-  padding: 0px 20px;
-  margin: 0px auto;
-}
-
+/* ====== desktop version ======*/
 .how-section {
-  padding-bottom: 72px;
+  display: flex;
+  width: 1136px;
+  height: 476px;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  flex-shrink: 0;
+  padding-bottom: 128px;
 }
-
-.how-description {
-  background-color: var(--WHITE);
-  border-radius: 15px;
-  padding: 20px 14px;
+.how-conteiner {
+  padding-left: 32px;
+  padding-right: 32px;
 }
-
 .how-title {
-  margin-bottom: 32px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: 600;
+  line-height: 1.16;
+  letter-spacing: -0.72px;
+  text-transform: uppercase;
 }
-
-iframe {
-  border-width: 0px;
+.how-content {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
-
-
+.how-box-video {
+  width: 600px;
+  height: 400px;
+}  
 .how-video {
-  width: 100%;
-  height: 500px;
+  width: 600px;
+  height: 400px;
+  margin-bottom: 0px;
+  
   border-radius: 15px;
   margin-bottom: 20px;
 }
+.how-description {
+  background: var(--WHITE);
+  border-radius: 15px;
+  width: 516px;
+  height: 400px;
+  padding: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 28px;
 
-
+}
 .how-list {
-  width: 100%;
   height: auto;
 }
-.how-recipe-title {
-  font-weight: 600;
-  font-size: 18px;
-  margin-bottom: 0;
-  line-height: 1.33;
-}
-
-.how-recipe-title br {
-  display: none;
-}
-
 .how-list-text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.28;
-  letter-spacing: -0.02em;
-  margin-bottom: 18px;
-  display: flex;
-  display: flex;
-   flex-direction: column;
-   gap: 18px;
-   margin-left: 20px;
-}
-.how-text:nth-child(-n + 1) {
-  margin-bottom: 0px;
+  width: 452px;
+  margin-bottom: 24px;
 }
 
-@media screen and (min-width: 375px) {
-  .how-container {
-    width: 375px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-
-
-
-/*====== tablet version ======*/
-@media screen and (min-width: 768px){
-  .how-container {
-   
-    padding-left: 77px;
-    padding-right: 77px;
-  }
-
-  .how-section {
-    padding-bottom: 100px;
-  }
-  
-  .how-description {
-    padding: 32px;
-  }
-
-  .how-title {
-    margin-bottom: 50px;
-  }
-
-  .how-video {
-    height: 400px;
-  }
-
-  .how-recipe-title {
-    max-width: 350px;
-    margin-bottom: 28px;
-  }
-
-  .how-recipe-title br {
-    display: flex;
-  }
-
-  .how-list-text {
-    width: 464px;
-    margin-bottom: 18px;
-  }
-}
-
-/* ====== desktop version ======*/
-@media screen and (min-width: 1200px) {
-  .how-conteiner {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
-  
-  .how-section {
-    padding-bottom: 128px;
-  }
-  .how-title {
-    margin-bottom: 50px;
-  }
-
-  .how-description {
-    width: 516px;
-    padding: 32px;
-  }
-
-  .how-content {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-  }
-
-  .how-video {
-    width: 600px;
-    margin-bottom: 0px;
-  }
-
-  .how-list {
-    height: auto;
-  }
-
-  .how-list-text {
-    width: 452px;
-    margin-bottom: 24px;
-  }
-
-  .how-text:nth-child(1) {
-    display: none;
-  }
-}
 
