corrected products container

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -1,5 +1,5 @@
 /* oprócz klasy .products pozostałe style rozpoczynają się od .prod- */
-.products>.container {
+.prod-container {
     display: flex;
     flex-direction: column;
     align-items: center;
