--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <section class="products">
     <a name="Our-products"></a>
-    <div class="container">
+    <div class="container prod-container">
         <h2 class="section-title">Our <span class="accent">products</span></h2>
         <div class="prod-box">
             <ul class="list prod-list">
