--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,44 +1,46 @@
-<section class="adv-section">
-  <ul class="adv-list">
-    <li class="adv-list-item">
-      <div class="adv-icon-border">
-        <svg class="adv-icon">
-          <use xlink:href="images/icons.svg#chocolate-bar"></use>
-        </svg>
-      </div>
-      <h2 class="adv-heading">Unsurpassed taste</h2>
-      <p class="adv-text">
-        Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a
-        decadent experience that simply cannot be matched. Savor the richness and complexity of our
-        Unsurpassed Taste and discover a new level of chocolate bliss.
-      </p>
-    </li>
-    <li class="adv-list-item">
-      <div class="adv-icon-border">
-        <svg class="adv-icon">
-          <use xlink:href="images/icons.svg#coin"></use>
-        </svg>
-      </div>
-      <h2 class="adv-heading">Affordable price</h2>
-      <p class="adv-text">
-        Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's
-        selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars
-        without sacrificing taste or quality. Browse our selection and indulge in affordable luxury
-        today.
-      </p>
-    </li>
-    <li class="adv-list-item">
-      <div class="adv-icon-border">
-        <svg class="adv-icon">
-          <use xlink:href="images/icons.svg#spoon"></use>
-        </svg>
-      </div>
-      <h2 class="adv-heading">Own production</h2>
-      <p class="adv-text">
-        We take pride in our own production process, ensuring that every step is carefully crafted
-        to perfection. From selecting the finest ingredients to handcrafting each piece, our
-        attention to detail is evident in every bite.
-      </p>
-    </li>
-  </ul>
+<section class="advantages">
+  <div class="container adv-section">
+    <ul class="adv-list">
+      <li class="adv-list-item">
+        <div class="adv-icon-border">
+          <svg class="adv-icon">
+            <use xlink:href="images/icons.svg#chocolate-bar"></use>
+          </svg>
+        </div>
+        <h2 class="adv-heading">Unsurpassed taste</h2>
+        <p class="adv-text">
+          Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a
+          decadent experience that simply cannot be matched. Savor the richness and complexity of
+          our Unsurpassed Taste and discover a new level of chocolate bliss.
+        </p>
+      </li>
+      <li class="adv-list-item">
+        <div class="adv-icon-border">
+          <svg class="adv-icon">
+            <use xlink:href="images/icons.svg#coin"></use>
+          </svg>
+        </div>
+        <h2 class="adv-heading">Affordable price</h2>
+        <p class="adv-text">
+          Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's
+          selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars
+          without sacrificing taste or quality. Browse our selection and indulge in affordable
+          luxury today.
+        </p>
+      </li>
+      <li class="adv-list-item">
+        <div class="adv-icon-border">
+          <svg class="adv-icon">
+            <use xlink:href="images/icons.svg#spoon"></use>
+          </svg>
+        </div>
+        <h2 class="adv-heading">Own production</h2>
+        <p class="adv-text">
+          We take pride in our own production process, ensuring that every step is carefully crafted
+          to perfection. From selecting the finest ingredients to handcrafting each piece, our
+          attention to detail is evident in every bite.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
