--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header-container">
         <nav class="header-nav-container">
-            <a href="./index.html" class="header-logo link">Simply Chocolate
+            <a href="./index.html" class="header-logo link">Simply <span class="header-logo-span">Chocolate</span>
                 <span>
                     <svg width="21" height="21" class="header-logo-svg">
                         <use href="./images/icons.svg#bitten-chocolate"></use>
