--- a/src/css/modal-subscribe.css
+++ b/src/css/modal-subscribe.css
@@ -1,1 +1,120 @@
 /* oprócz klasy .modal-subscribe pozostałe style rozpoczynają się od .mod-sub- */
+.modal-subscribe {
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    width: 100%;
+    max-height: 100%;
+    margin: 0 auto;
+    padding: 32px 24px;
+    background-color: var(--LIGHT-BKG);
+    border-radius: 15px;
+    transform: translate(-50%, -50%);
+    overflow: auto;
+}
+.mod-sub-img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 169px;
+    background-color: var(--DARK);
+    background-image: url("../images/mob-mod-subscribe-311x169.jpg");
+	background-repeat: no-repeat;
+	background-position: center, center;
+	background-size: cover;
+	border-radius: 30px;
+	color: var(--WHITE);;
+}
+.mod-sub-txt {
+    padding: 32px 24px;
+}
+.mod-sub-title {
+    display: block;
+    color: var(--DARK);
+    text-transform: uppercase;
+    margin-bottom: 24px;
+}
+.btn.mod-sub-close {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    width: 24px;
+    height: 24px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    color: var(--DARK);
+    background-color: transparent;
+    border: none;
+    /* transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+}
+.btn.close-order:hover,
+.btn.close-order:focus {
+    color: var(--ACCENT);
+}
+.mod-sub-list {
+    display: flex;
+    flex-direction: row;
+}
+.mod-sub-form-input {
+    padding: 14px 18px;
+    background-color: var(--LIGHT-BKG);
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    border-radius: 25px;
+}
+.mod-sub-form-input,
+.mod-sub-btn {
+    flex-grow: 1;
+}
+.mod-sub-form-input::placeholder {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+    color: rgba(64, 64, 64, 0.30);
+}
+@media screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
+    .mod-sub-img {
+        background-image: url("../images/mob-mod-subscribe-311x169@2x.jpg");
+    }
+}
+@media screen and (min-width: 375px) {
+    .modal-subscribe {
+        width: 311px;
+        max-height: 95%;
+    }
+}
+@media screen and (min-width: 768px) {
+    .modal-subscribe {
+        width: 538px;
+    }
+    .mod-sub-img {
+        height: 196px;
+        background-image: url("../images/tab-des-mod-subscribe-538x196.jpg");
+    }
+    .mod-sub-txt {
+        padding: 40px;
+    }
+    .mod-sub-title {
+        margin-bottom: 28px;
+    }
+    .mod-sub-list {
+        gap: 8px;
+    }
+    .mod-sub-form-input {
+        padding: 14px 24px;
+        border-radius: 30px;
+    }
+    .mod-sub-form-input::placeholder {
+        font-size: 18px;
+        letter-spacing: -0.36px;
+    }
+}
+@media screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
+    .mod-sub-img {
+        background-image: url("../images/tab-des-mod-subscribe-538x196@2x.jpg");
+    }
+}
