--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,13 @@
-<section class="hero-container-first hero-body hero-background">
-    <div class="hero-container">
-        <h1 class="hero-visually-hidden">hidden</h1>
+<section class="hero">
+    <div class="container hero-background">
+        <h1 class="visually-hidden">hidden</h1>
         <h2 class="hero-text">Treat yourself or a loved one
             to our finest ingredients for a moment of pure delight!</h2>
         <div class="hero-tablet">
-            <div>
-                <button data-modal-buy1-open type="button" class="hero-button hero-button-margin">Buy now</button>
-                <button type="button" class="hero-button">How its made</button>
+            <div class="hero-buttons">
+                <button data-modal-buy1-open type="button" class="btn btn-accent hero-button-buy hero-button-margin">Buy
+                    now</button>
+                <button type="button" class="btn btn-outln hero-button-buy">How its made</button>
             </div>
             <div class="hero-scroll">
                 <p class="hero-scroll-text">scroll down</p>
