--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,9 +1,11 @@
 <section class="subscribe">
-  <h2 class="sub-heading">EXPLORE OUR NEW<br />CHOCOLATE FIRST</h2>
-  <p class="sub-text">
-    From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence
-    that will leave you craving more. Made with only the finest ingredients and handcrafted with the
-    utmost care, each piece is a work of art that is sure to please.
-  </p>
-  <button type="button" class="sub-button">Subscribe</button>
+    <div class="container sub-container">
+        <h2 class="section-title sub-heading">Explore our new<br />chocolate first</h2>
+        <p class="sub-text">
+            From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence
+            that will leave you craving more. Made with only the finest ingredients and handcrafted with the
+            utmost care, each piece is a work of art that is sure to please.
+        </p>
+        <button type="button" class="btn btn-accent sub-button" data-modal-subscribe-open>Subscribe</button>
+    </div>
 </section>
