--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -9,7 +9,7 @@
                         alt="Orange dark chocolate">
                     <h3 class="prod-item-title">Orange</h3>
                     <p class="prod-item-txt">Dark chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">45 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">45 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img"
