--- a/src/css/modal-subscribe.css
+++ b/src/css/modal-subscribe.css
@@ -6,9 +6,9 @@
     width: 100%;
     max-height: 100%;
     margin: 0 auto;
-    padding: 32px 24px;
+    padding: 0;
     background-color: var(--LIGHT-BKG);
-    border-radius: 15px;
+    border-radius: 30px;
     transform: translate(-50%, -50%);
     overflow: auto;
 }
@@ -18,11 +18,10 @@
     width: 100%;
     height: 169px;
     background-color: var(--DARK);
-    background-image: url("../images/mob-mod-subscribe-311x169.jpg");
+    background-image: url("../images/subscribe/mob-mod-subscribe-311x169.jpg");
 	background-repeat: no-repeat;
 	background-position: center, center;
 	background-size: cover;
-	border-radius: 30px;
 	color: var(--WHITE);;
 }
 .mod-sub-txt {
@@ -31,10 +30,11 @@
 .mod-sub-title {
     display: block;
     color: var(--DARK);
+    text-align: left;
     text-transform: uppercase;
     margin-bottom: 24px;
 }
-.btn.mod-sub-close {
+.mod-sub-close {
     position: absolute;
     top: 14px;
     right: 14px;
@@ -44,7 +44,7 @@
     justify-content: center;
     align-items: center;
     padding: 0;
-    color: var(--DARK);
+    fill: var(--WHITE);
     background-color: transparent;
     border: none;
     /* transition-property: color;
@@ -56,29 +56,43 @@
     color: var(--ACCENT);
 }
 .mod-sub-list {
-    display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
-.mod-sub-form-input {
+.mod-sub-list-item1 {
+    flex-grow: 1;
+}
+.mod-sub-list-item2 {
+    flex-grow: 0;
+}
+.mod-sub-input,
+.mod-sub-btn {
+    height: 45px;
+}
+.mod-sub-input {
+    flex-grow: 1;
     padding: 14px 18px;
     background-color: var(--LIGHT-BKG);
     border: 1.5px solid rgba(17, 17, 17, 0.05);
     border-radius: 25px;
 }
-.mod-sub-form-input,
-.mod-sub-btn {
-    flex-grow: 1;
-}
-.mod-sub-form-input::placeholder {
+.mod-sub-input::placeholder {
     font-size: 14px;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.28px;
     color: rgba(64, 64, 64, 0.30);
 }
+.mod-sub-btn {
+    padding: 14px 28px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 100px;
+}
 @media screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
     .mod-sub-img {
-        background-image: url("../images/mob-mod-subscribe-311x169@2x.jpg");
+        background-image: url("../images/subscribe/mob-mod-subscribe-311x169@2x.jpg");
     }
 }
 @media screen and (min-width: 375px) {
@@ -93,7 +107,7 @@
     }
     .mod-sub-img {
         height: 196px;
-        background-image: url("../images/tab-des-mod-subscribe-538x196.jpg");
+        background-image: url("../images/subscribe/tab-des-mod-subscribe-538x196.jpg");
     }
     .mod-sub-txt {
         padding: 40px;
@@ -104,17 +118,25 @@
     .mod-sub-list {
         gap: 8px;
     }
-    .mod-sub-form-input {
+    .mod-sub-input,
+    .mod-sub-btn {
+        height: 52px;
+    }
+    .mod-sub-input {
         padding: 14px 24px;
         border-radius: 30px;
     }
-    .mod-sub-form-input::placeholder {
+    .mod-sub-input::placeholder {
         font-size: 18px;
         letter-spacing: -0.36px;
+    }
+    .mod-sub-btn {
+        padding: 17px 40px;
+        border-radius: 100px;
     }
 }
 @media screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
     .mod-sub-img {
-        background-image: url("../images/tab-des-mod-subscribe-538x196@2x.jpg");
+        background-image: url("../images/subscribe/tab-des-mod-subscribe-538x196@2x.jpg");
     }
 }
