--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -1,65 +1,162 @@
 /* oprócz klasy .how-its-made pozostałe style rozpoczynają się od .how- */
-/* ====== desktop version ======*/
-.how-section {
+/*======  mobile version  ======*/
+.how-section{
+  padding-bottom: 72px;
+}
+.how-container {
   display: flex;
-  width: 1136px;
-  height: 476px;
   flex-direction: column;
-  align-items: center;
-  gap: 50px;
+  align-items: flex-start;
+  height: 976px;
+  gap: 20px;
   flex-shrink: 0;
-  padding-bottom: 128px;
+  width: 100%;
+  padding: 0 16px;
+  margin: 0 auto; 
 }
-.how-conteiner {
-  padding-left: 32px;
-  padding-right: 32px;
-}
+
 .how-title {
-  margin-bottom: 50px;
+  margin-bottom: 32px;
   text-align: center;
+  font-size: 20px;
   font-weight: 600;
-  line-height: 1.16;
-  letter-spacing: -0.72px;
+  line-height: 1.20;
+  letter-spacing: -0.03;
   text-transform: uppercase;
 }
-.how-content {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-.how-box-video {
-  width: 600px;
-  height: 400px;
-}  
+
 .how-video {
-  width: 600px;
-  height: 400px;
-  margin-bottom: 0px;
-  
+  width: 100%;
+  height: 500px;
   border-radius: 15px;
   margin-bottom: 20px;
 }
+
+iframe {
+  border-width: 0px;
+}
+
 .how-description {
-  background: var(--WHITE);
   border-radius: 15px;
-  width: 516px;
-  height: 400px;
-  padding: 32px;
-  display: flex;
+  padding: 20px 14px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 28px;
-
+  background: var(--WHITE);
+ 
 }
+
+.how-recipe-title {
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: 600;
+}
+ .how-recipe-title br {
+  display: none;
+}
+
 .how-list {
+  width: 100%;
   height: auto;
 }
+
 .how-list-text {
-  width: 452px;
-  margin-bottom: 24px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: ;
+  margin-bottom: 18px;
+
 }
+@media screen and (min-width: 375px) {
+  .how-container {
+    padding-left: 20px;
+    padding-right:20px;
+  }
+}
+/*====== tablet version ======*/
+
+@media screen and (min-width: 768px) {
+  .how-section {
+    padding-bottom: 100px;
+  }
+
+  .how-container {
+    width: 768px;
+    padding-left: 77px;
+    padding-right: 77px;
+  }
+  .how-description {
+    padding: 32px;
+  }
+
+  .how-title {
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+    line-height: 1.16;
+  }
+  .how-video {
+    height: 400px;
+  }
+
+  .how-recipe-title {
+    max-width: 350px;
+    margin-bottom: 28px;
+  }
+
+  .how-recipe-title br {
+    display: flex;
+  }
+
+  .how-list-text {
+    width: 464px;
+  }  
+}
+ /*====== desktop version ======*/
+@media screen and (min-width: 1200px) {
+  .how-section {
+    padding-bottom: 128px;
+    
+  }
+  
+  .how-container {
+    width: 1200px;
+
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .how-content {
+    display: flex;
+    gap: 20px;
+  }
+
+  .how-description {
+    width: 516px;
+    padding: 32px;
+  }
+
+  .how-video {
+    width: 600px;
+    margin-bottom: 0px;
+  }
+  
+  .how-list {
+    height: auto;
+  }
+   .how-list-text {
+    width: 452px;
+    margin-bottom: 24px;
+   }
+
+   .how-text:nth-child(1) {
+    display: none;
+  }
+}
+
+
+
+
+
+
 
 
