--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -6,7 +6,8 @@
 .how-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  /*align-items: flex-start;*/
+  text-align:center;
   height: 976px;
   gap: 20px;
   flex-shrink: 0;
@@ -21,7 +22,7 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 1.20;
-  letter-spacing: -0.03;
+  letter-spacing: -0.03em;
   text-transform: uppercase;
 }
 
