Update section/top-seller id

--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,6 +1,6 @@
-<section class="top-sellers container">
+<section id="Top=sellers" class="top-sellers container">
   <h2 class="section-title">
-    <a name="Top-sellers" class="link"><span class="accent">TOP</span> SELLERS</a>
+    <a class="link"><span class="accent">TOP</span> SELLERS</a>
   </h2>
   <div class="top-content-div">
     <ul class="top-list">
