--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,7 +1,49 @@
 <!-- element zamykający to okno musi mieć parametr data-modal-subscribe-close -->
 <!-- klasy powinny mieć przedrostek mod-sub- -->
-<div class="modal is-hidden" data-modal-subscribe>
-    <div class="modal-subscribe">
-        
+
+
+<div class="is-hidden modal" data-modal-subscribe>
+  <div class="modal-subscribe">
+    <div class="mod-subscribe-image">
+      <button
+        type="button"
+        class="btn clear-style mod-subscribe-close"
+        data-modal-subscribe-close
+      >
+        <svg class="mod-subscribe-close" width="28" height="28">
+          <use href="./images/icons.svg#x-close"></use>
+        </svg>
+      </button>
     </div>
+    <div class="mod-subscribe-text">
+      <h2 class="mod-subscribe-title section-title">
+        Explore our<br /><span class="accent">new chocolate</span> first!
+      </h2>
+      <form class="mod-subscribe-form" name="subscribe-form">
+        <ul class="mod-subscribe-list list">
+          <li class="mod-subscribe-list-one">
+            <label class="mod-subscribe-label visually-hidden" for="user-email"
+              >E-mail</label
+            >
+            <input
+              class="mod-subscribe-input clear-style"
+              id="user-email"
+              type="email"
+              name="user-email"
+              placeholder="Enter your email"
+              required
+            />
+          </li>
+          <li class="mod-subscribe-list-two">
+            <button
+              class="btn btn-accent mod-subscribe-btn clear-style"
+              type="submit"
+            >
+              Subscribe
+            </button>
+          </li>
+        </ul>
+      </form>
+    </div>
+  </div>
 </div>
