--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,5 +1,4 @@
-<section id="how-its-made" class="how-section">
-  <a name="How-its-made"></a>
+<section id="How-its-made" class="how-section">
   <div class="container how-container">
     <h2 class="section-title how-title">HOW IT'S <span class="accent">MADE?</span>
     </h2>
