--- a/src/css/modal-subscribe.css
+++ b/src/css/modal-subscribe.css
@@ -1,7 +1,128 @@
 /* oprócz klasy .modal-subscribe pozostałe style rozpoczynają się od .mod-sub- */
-.modal-subscribe {
-    position: absolute;
-
-
-    
+.modal-subscribe { 
+  margin: 0 auto;
+  padding: 32px 24px;
+  background-color: var(--LIGHT-BKG);
+  border-radius: 15px;
+  transform: translate(-50%, -50%);
+  overflow: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  max-height: 100%;
 }
+
+.mod-subscribe-text {
+  padding: 32px 24px;
+}
+.mod-subscribe-title {
+  color: var(--DARK);
+  display: block;
+  
+text-transform: uppercase;
+  margin-bottom: 24px;
+}
+.mod-subscribe-image { 
+  color: var(--WHITE);
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 169px;
+  background-color: var(--DARK);
+  background-image: url("../images/mob-mod-subscribe-311x169.jpg");
+  background-repeat: no-repeat;
+  background-position: center, center;
+  background-size: cover;
+  border-radius: 30px;
+ 
+}
+.btn.mod-subscribe-close {
+  color: var(--DARK);
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+
+
+.mod-subscribe-list {
+  display: flex;
+  flex-direction: row;
+}
+.mod-subscribe-form-input {
+  padding: 14px 18px;
+  background-color: var(--LIGHT-BKG);
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border-radius: 25px;
+}
+.mod-subscribe-form-input,
+.mod-subscribe-btn {
+  flex-grow: 1;
+}
+.mod-subscribe-form-input::placeholder {
+  color: rgba(64, 64, 64, 0.3);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.28px;
+  
+}
+
+.btn.close-order:hover,
+.btn.close-order:focus {
+  color: var(--ACCENT);
+}
+}
+@media screen and (min-width: 375px) {
+  .modal-subscribe {
+    width: 311px;
+    max-height: 95%;
+  }
+}
+
+}
+@media screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
+  .mod-subscribe-image {
+    background-image: url("../images/tab-des-mod-subscribe-538x196@2x.jpg");
+  }
+}
+
+
+
+@media screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx)) {
+  .mod-subscribe-image {
+    background-image: url("../images/mob-mod-subscribe-311x169@2x.jpg");
+  }
+  @media screen and (min-width: 768px) {
+  .modal-subscribe {
+    width: 538px;
+  }
+  .mod-subscribe-image {
+    height: 196px;
+    background-image: url("../images/tab-des-mod-subscribe-538x196.jpg");
+  }
+  .mod-subscribe-text {
+    padding: 40px;
+  }
+  .mod-subscribe-title {
+    margin-bottom: 28px;
+  }
+  .mod-subscribe-list {
+    gap: 8px;
+  }
+  .mod-subscribe-form-input {
+    padding: 14px 24px;
+    border-radius: 30px;
+  }
+  .mod-subscribe-form-input::placeholder {
+    font-size: 18px;
+    letter-spacing: -0.36px;
+  }
